# opti-doc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PROJECT_CONTEXT.md  README.md  deploy-cloudshell.sh  implementation_plan.md
.github/workflows/: deploy-gcp.yml
cloud-run/: cli-service.yaml  landing-service.yaml
crates/optidock-agent/: Cargo.toml
crates/optidock-agent/src/: lib.rs
crates/optidock-analyzer/: Cargo.toml
crates/optidock-analyzer/src/: lib.rs
crates/optidock-cli/: Cargo.toml
crates/optidock-cli/src/: auth.rs  main.rs
crates/optidock-core/: Cargo.toml
crates/optidock-core/src/: lib.rs  models.rs  prompting.rs
crates/optidock-runner/: Cargo.toml
crates/optidock-runner/src/: lib.rs
docs/: gcp-deployment.md  install.md
docs/architecture/: ai-providers.md  cli-first.md
landing/: .dockerignore  Dockerfile  README.md  design.md  index.html  jsconfig.json  letter-glitch-preview.js  package.json  styles.css
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/docs/: page.tsx
landing/app/login/: page.tsx
landing/app/signup/: page.tsx
landing/app/use-cases/: page.tsx
landing/components/: LetterGlitch.tsx  Threads.tsx
landing/utils/supabase/: middleware.ts  server.ts
ml/: __init__.py  error_learner.py  error_store.py  memory_context.py  prompt_generator.py  requirements.txt  train.py
next-app/: .gitignore  package-lock.json
next-app/app/: globals.css  page.tsx
next-app/components/: liquid-ether.tsx
scripts/: install.ps1  install.sh  oracle_auth_bootstrap.sql  uninstall.sh
