[workspace]
members = [
    "crates/optidock-cli",
    "crates/optidock-core",
    "crates/optidock-analyzer",
    "crates/optidock-runner",
    "crates/optidock-agent",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OptiDock AI"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
oracle-rs = "0.1.5"
password-hash = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
