[package]
name = "optidock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "optidock"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
clap.workspace = true
dotenvy.workspace = true
oracle-rs.workspace = true
password-hash.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http.workspace = true
optidock-agent = { path = "../optidock-agent" }
optidock-core = { path = "../optidock-core" }
optidock-runner = { path = "../optidock-runner" }
